--- a/da0031.md
+++ b/da0031.md
@@ -3,15 +3,15 @@
 
 
 
-# make directories for the tar file
-
+## make directories for the tar file
+```sh
 mkdir -p /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/raw 
 cd /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/raw
 
 wget -c --no-check-certificate --auth-no-challenge --user 'jeanpierre.elbers' --ask-password https://ngs.vbcf.ac.at/filemanager/byurl/Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz
-
-# check the md5sum
-
+```
+## check the md5sum
+```sh
 cat Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz.md5sum.txt
 f5f0b8ffed3bcb8bcc5ef5339155d400 Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz
 
@@ -24,20 +24,20 @@ cat Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz.md5sum.check
 # untar
 
 tar xzf Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz > Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz.untar.log 2>&1 &
-
+```
 
 
 
 
 ## Get zebra fish reference
-
+```sh
     mkdir -p /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/ref
     cd /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/ref
     wget http://ftp.ensembl.org/pub/release-104/fasta/danio_rerio/dna/Danio_rerio.GRCz11.dna.primary_assembly.fa.gz
     wget http://ftp.ensembl.org/pub/release-104/fasta/danio_rerio/cdna/Danio_rerio.GRCz11.cdna.all.fa.gz
-
+```
 ## Make Salmon/1.1.0 reference
-
+```sh
     module load salmon/1.1.0
     grep "^>" <(gunzip -c Danio_rerio.GRCz11.dna.primary_assembly.fa.gz) | cut -d " " -f 1 > decoys.txt
     sed -i.bak -e 's/>//g' decoys.txt
@@ -46,18 +46,21 @@ tar xzf Kji01dY8of-HJHMFDSX2_4_R12083_20210828.tar.gz > Kji01dY8of-HJHMFDSX2_4_R
     2> Danio_rerio.GRCz11.Ensembl104.salmon.1.1.0.idx.stderr 1> Danio_rerio.GRCz11.Ensembl104.salmon.1.1.0.idx.stdout
 
     zcat Danio_rerio.GRCz11.cdna.all.fa.gz |grep ">" |cut -f 1,4 -d " "|perl -pe "s/>//g"|perl -pe "s/gene://g" |tr ' ' '\t' > Danio_rerio.GRCz11.Ensembl104.transcripts2genes.tsv
+```
 
-
-# convert transcripts to gene symbols for Enhanced volcano plot
+## convert transcripts to gene symbols for Enhanced volcano plot
+```sh
 zcat Danio_rerio.GRCz11.cdna.all.fa.gz|grep ">" |cut -f 1,7 -d " " |perl -pe "s/>//g" |tr ' ' '\t' |perl -pe "s/gene_symbol://g" > transcript2geneSymbol.txt
+```
 
-
-# convert Ensembl gene ids to gene symbols for Enhanced volcano plot
+## convert Ensembl gene ids to gene symbols for Enhanced volcano plot
+```sh
 zcat Danio_rerio.GRCz11.cdna.all.fa.gz|grep ">" |cut -f 4,7 -d " " |perl -pe "s/gene://g" |tr ' ' '\t' |perl -pe "s/gene_symbol://g" > gene2geneSymbol.txt
+```
 
 
-
-cat samples.txt
+samples.txt
+```sh
 168952	Animal_Ecto_21.6.21	RNAseq.Animal.1
 168953	Animal_ecto_25.6.21	RNAseq.Animal.2
 168954	Animal_ecto_5.7.21	RNAseq.Animal.3
@@ -74,16 +77,17 @@ cat samples.txt
 168965	All_white_19.7.21	RNAseq.All.1
 168966	All_Red_19.7.21	RNAseq.All.2
 168967	All_Blue_19.7.21	RNAseq.All.3
+```
 
 
-
-# make symlinks for easier read identification
-
+## make symlinks for easier read identification
+```sh
 while read a b
 do
   ln -s HJHMFDSX2_4_R12083_20210828/demultiplexed/${a}/${a}*R1*.fastq.gz ${b}.mate1.fastq.gz
   ln -s HJHMFDSX2_4_R12083_20210828/demultiplexed/${a}/${a}*R2*.fastq.gz ${b}.mate2.fastq.gz
 done < <(cut -f 1,3 samples.txt)
+```
 
 
 
@@ -97,12 +101,13 @@ done < <(cut -f 1,3 samples.txt)
 
 
 
-
-# prepare for Snakemake analysis pipeline for differential gene expression
-
+## prepare for Snakemake analysis pipeline for differential gene expression
+```sh
 cd /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1
+```
 
-cat config.yaml
+config.yaml
+```sh
 # defining the sample/file names
 #	Experiment	... <string> without \s \.
 #	Condition{1,}	... <string> without \s \.
@@ -153,6 +158,7 @@ salmon-params: " --seqBias --gcBias "
 # dgea parameters
 # specifiy comparisons to be made: <condition1-condition2::condition1-condition3:: ... >
 dgea-cmps: "Animal-Lateral"
+```
 
 
 
@@ -165,8 +171,8 @@ dgea-cmps: "Animal-Lateral"
 
 
 
-
-cat id2sample.txt
+id2sample.txt
+```sh
 Animal.1        Animal_Ecto_21.6.21
 Animal.2        Animal_ecto_25.6.21
 Animal.3        Animal_ecto_5.7.21
@@ -177,6 +183,7 @@ Lateral.2       Lateral_Ecto_24.6.21
 Lateral.3       Lateral_Ecto_2.7.21
 Lateral.4       Lateral_ecto_7.7.21
 Lateral.5       Lateral_Ecto_12.7.21
+```
 
 
 
@@ -196,8 +203,8 @@ Lateral.5       Lateral_Ecto_12.7.21
 
 
 
-
-cat Snakefile
+Snakefile
+```sh
 # specify name of external config-file
 configfile: "config.yaml"
 
@@ -419,6 +426,7 @@ rule clean:
         rm -rf dgea/
         rm -rf auxData/
         '''
+```
 
 
 
@@ -427,8 +435,8 @@ rule clean:
 
 
 
-
-cat scripts/DESeq2_multiComp.R 
+scripts/DESeq2_multiComp.R 
+```sh
 # load packages
   library("tximport")
   library("DESeq2")
@@ -638,6 +646,7 @@ ggsave(filename="dgea/DA0031_2021_Sep_01_analysis.1.pca.pdf", plot = p, width = 
 
 # dump session info into file
   writeLines(capture.output(sessionInfo()), "dgea/RsessionInfo.txt")
+ ```
  
  
  
@@ -646,8 +655,8 @@ ggsave(filename="dgea/DA0031_2021_Sep_01_analysis.1.pca.pdf", plot = p, width = 
  
  
  
- 
-cat cluster.json
+cluster.json
+```sh
 {
     "__default__":
     {
@@ -666,35 +675,35 @@ cat cluster.json
         "partition" : "defaultp"
     }
 }
-
+```
  
  
 
-# set up Snakemake environment and run the analysis
- 
+## set up Snakemake environment and run the analysis
+```sh
 conda activate snakemake-6.3.0
 snakemake --snakefile Snakefile --dryrun  --dag all | dot -Tsvg > dag.svg
 snakemake --snakefile Snakefile --printshellcmds --latency-wait 60 --local-cores 1 --cores all --cluster-config cluster.json --cluster "sbatch --export=NONE --no-requeue --job-name {cluster.job-name} --mem={cluster.mem} --time={cluster.time} --cores={THREADS} " all > snakemake.log 2>&1 &
+```
 
 
 
 
-
-# make multiqc report of before and after trimming
-
+## make multiqc report of before and after trimming
+```sh
 cd /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/qc
 
 conda activate python-3.9.4
 
 /nfs/scistore16/itgrp/jelbers/.local/bin/multiqc --interactive . --title DA0031-2021_Sep_01-analysis.1-trimming
+```
 
 
 
 
 
-
-
-
+## manully run the dgea analysis
+```sh
 cd /nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/
 mkdir -p dgea
 module load R/4.0.3
@@ -707,8 +716,10 @@ Rscript --no-save --no-restore scripts/DESeq2_multiComp.R auxData/t2g.csv Animal
 # minus two outliers
 # saved to /home/jelbers/Downloads/heisenberg/DA0031/2021_Sep_01/analysis.1/dgea/minus-animal.1-lateral.4
 Rscript --no-save --no-restore scripts/DESeq2_multiComp.R auxData/t2g.csv Animal-Lateral quants/RNAseq.Animal.2/quant.sf quants/RNAseq.Animal.3/quant.sf quants/RNAseq.Animal.4/quant.sf quants/RNAseq.Animal.5/quant.sf quants/RNAseq.Lateral.1/quant.sf quants/RNAseq.Lateral.2/quant.sf quants/RNAseq.Lateral.3/quant.sf quants/RNAseq.Lateral.5/quant.sf > logs/deseq2_dgea/DESeq2.out 2> logs/deseq2_dgea/DESeq2.err &
+```
 
-
+## on a local computer
+```sh
 cd /home/jelbers/Downloads/heisenberg/DA0031/2021_Sep_01/analysis.1/dgea
 rsync --stats --progress --archive jelbers@bea81.ista.local://nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/ref/transcript2geneSymbol.txt .
 rsync --stats --progress --archive jelbers@bea81.ista.local://nfs/scistore16/itgrp/bioinf/projects/DA0031/2021_Sep_01/analysis.1/ref/gene2geneSymbol.txt .
@@ -732,15 +743,18 @@ while read a b
 do
  perl -pi -e "s/${a}/${b}/g" DESeq2_Animal-Lateral_enhanced_volcano.csv
 done < ../gene2geneSymbol.txt &
+```
 
-
-
-
+## activate correct conda environment for volcano plots
+```sh
 cd /home/jelbers/Downloads/heisenberg/DA0031/2021_Sep_01/analysis.1/dgea
 
 conda activate enhancedvolcano-1.10.0
+```
 
-R
+in R
+
+```R
 library(EnhancedVolcano)
 library(biomaRt)
 #install.packages("xml2")
@@ -795,15 +809,6 @@ pdf("enhanced-volcano-minus-animal.1-lateral.4.pdf", width=8.5, height=11)
   colConnectors = 'black') + coord_flip()
 dev.off()
 
-
-
-
-
-
-
-
-
-
 # read in comma-delimited DESeq output
 minus2 <- read.table("all-animal-all-lateral/DESeq2_Animal-Lateral.csv",header=T)
 
@@ -849,6 +854,8 @@ pdf("enhanced-volcano-all-animal-all-lateral.pdf", width=8.5, height=11)
   widthConnectors = 1.0,
   colConnectors = 'black') + coord_flip()
 dev.off()
+quit()
+```
 
 
 
@@ -863,11 +870,13 @@ dev.off()
 
 
 
+## activate the next conda environment for functional enrichment plots
 
-
-
-
+```sh
 conda activate clustifyr-1.5.0
+```
+
+```R
 library(clusterProfiler)
 library(enrichplot)
 # we use ggplot2 to add x axis labels (ex: ridgeplot)
@@ -972,9 +981,12 @@ write.table(x=gse@result,file="gene-set-enrichment-all-animal-all-lateral.txt",e
 pdf("gene-set-enrichment-all-animal-all-lateral.pdf",height=11,width=8.5)
 dotplot(gse, showCategory=10, split=".sign",color="pvalue") + facet_grid(.~.sign)
 dev.off()
+quit()
+```
 
+## map a zip file for sharing results
 
-
+```sh
 cd /home/jelbers/Downloads/heisenberg/DA0031
 
 zip DA0031-2021_Sep_01-analysis1.zip \
@@ -990,3 +1002,4 @@ zip DA0031-2021_Sep_01-analysis1.zip \
 2021_Sep_01/analysis.1/dgea/minus-animal.1-lateral.4/DA0031_2021_Sep_01_analysis.1.pca.pdf \
 2021_Sep_01/analysis.1/dgea/minus-animal.1-lateral.4/DESeq2_Animal-Lateral.csv \
 2021_Sep_01/analysis.1/dgea/gene-set-enrichment-minus-animal.1-lateral.4.txt
+```
